--- a/logs-bugs-reporter/pom.xml
+++ b/logs-bugs-reporter/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -12,10 +13,12 @@
 	<version>0.0.1</version>
 	<packaging>pom</packaging>
 	<name>logs-bugs-reporter</name>
-	<description>logs management and openning bugs from exception</description>
+	<description>logs management and openning bugs from the exceptions</description>
+
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,8 +46,10 @@
 	</build>
 
 	<modules>
-		<module>log.bugs.dto</module>
+		<module>log-bugs-dto</module>
 		<module>logs-bugs-mongo-document</module>
-    <module>logs-provider</module>
-  </modules>
+		<module>logs-provider</module>
+		<module>logs-db-populator</module>
+		<module>logs-analyzer</module>
+	</modules>
 </project>
